fixed footer overlap

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,6 +1,6 @@
 .background {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   background-image: linear-gradient(to top right, green, yellow);
 }
 
